Fixed the text in the expandable links not showing by setting values for the z-index of the headers and text. Also fixed a bug where only the first link had '<div class=tile-content>' set, which was also preventing the text from showing correctly.

--- a/Desktop/full-stack-development-projects/project-1/assets/css/style.css
+++ b/Desktop/full-stack-development-projects/project-1/assets/css/style.css
@@ -131,7 +131,11 @@ nav a:hover {
 }
 
 .expanding-links .tile h3 {
-    color: var(--hungary-white);
+    z-index: 2;
+}
+
+.expanding-links .tile p {
+    z-index: 2;
 }
 
 /* Set widths equally, then expand on hover */
@@ -162,6 +166,7 @@ nav a:hover {
     position: absolute;
     inset: 0;
     background: var(--hungary-red);
+    z-index: 1;
 }
 
 .expanding-links .tile .more {
